--- a/async/weather_try/templates/views/index.hbs
+++ b/async/weather_try/templates/views/index.hbs
@@ -16,11 +16,11 @@
             <input  type="text"
                     class="txtWeather"
                     placeholder="Location..."
-                    size="20" /><br />
+                    size="20" />
             <button id="btnW">Find weather</button>
             
         </form>
-        <p id="location"></p>
+        <p id="location">Type the city to find out the weather.</p>
         <p id="weatherMsg"></p>
         {{>para}}
     </div>
